--- a/算法/查找/二分查找.md
+++ b/算法/查找/二分查找.md
@@ -1,6 +1,6 @@
-## 适用
+## 适用(前提)
 
-二分法的输入是一个有序的元素列表(用数组举例)必须是有序的，升序或降序
+二分法的输入是一个有序的元素列表(用数组举例)必须是有序的，升序或降序。
 
 ## 原理
 
@@ -11,6 +11,19 @@
 ③ 反之，如果中间值小于我们给定的值，那么说明给定值在中间位置之后，此时需要再次将后一部分的值进行二分，因为在中间值之后，所以我们需要改变的值是开始位置的值，此时开始位置的值应该是我们此时的中间位置，直到我们找到指定值。
 
 ④ 或者中间值等于最初的起始位置，或结束位置（此时说明给定值未找到）。
+
+## 时间复杂度
+
+**O(logN)**
+
+对于每一次迭代，我们将数据划分为两半，丢弃一半，另一半用于搜索。在分别进行了1，2次和3次迭代之后，我们的列表长度逐渐减少到n/2，n/4，n/8...。因此，我们可以发现，k次迭代后，将只会留下n/2^k项。最后的结果就是 n/2^k = 1，然后我们两边分别取对数 得到 k = log(n)，这就是二分搜索算法的最坏运行时间复杂度。
+
+
+| best time complexity                    | O(1)     |
+| --------------------------------------- | -------- |
+| worst time complexity(最差时间复杂度)   | O(log n) |
+| Average time complexity(平均时间复杂度) | O(log n) |
+| Space time complexity(空间复杂度)       | O(1)     |
 
 ## 实现
 
@@ -89,7 +102,7 @@ echo binary_search($arr, 4);
 echo '<hr/>';
 ```
 
-**while实现方式**
+**非递归实现-while实现方式**
 
 ```php
 /**
@@ -129,7 +142,7 @@ echo '<hr/>';
 
 ### python实现
 
-**while方式实现**
+**非递归实现-while方式实现**
 
 ```python
 def binary_search(list, item):
@@ -155,3 +168,68 @@ my_list = [1, 3, 5, 7, 9, 11]
 print(binary_search(my_list, 9))
 print(binary_search(my_list, -1))
 ```
+
+### java实现
+
+**非递归实现**
+
+```java
+/**
+ * 二分查找的非递归实现
+ *
+ * @param arr    要查找的数组 arr是升序排列
+ * @param target 要查找的目标
+ * @return 返回对应下标
+ */
+public static int binarySearch(int[] arr, int target) {
+	int left = 0;
+	int right = arr.length - 1;
+  
+  // 提前结束
+  if (value < arr[low] || value > arr[high]) {
+		return -1;
+  }
+  
+	while (left <= right) {
+    // 防止越界, middle = left + (right - left) / 2就好了
+		int mid = (left + right) / 2;
+		if (arr[mid] == target) {
+			return mid;
+		} else if (arr[mid] > target) {
+			// 需要向左边查找
+			right = mid - 1;
+		} else {
+			left = mid + 1;
+		}
+	}
+	return -1;
+}
+```
+
+### go语言实现
+
+```go
+// MyBinarySearch 二分查找法，在有序数组中查询目标元素target，并返回元素对应的索引值
+func MyBinarySearch(arr []int, target int) (middle int) {
+	left, right := 0, len(arr)-1 // 明确边界的意义，在[left,right]中寻找target
+	for left <= right {
+    // 防止越界改为:middle = left + (right - left) / 2
+		middle = (left + right) / 2
+		// 当left > right 时，意味着边界不存在，则代表数组中没有目标值target
+		// 所以当left <= right 时，我们就遍历数组
+		if arr[middle] == target {
+			return
+		}
+		if target < arr[middle] {
+			// 如果target < 中间值 则代表我们要在左边区间查找
+			right = middle - 1
+		}
+		if target > arr[middle] {
+			// 如果target > 中间值，则代表我们要在右边区间查找
+			left = middle + 1
+		}
+	}
+	return -1
+}
+```
+
